# ChangeLog for net-im/kadu
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*kadu-9999 (14 Sep 2009)
*kadu-0.6.5.3 (14 Sep 2009)

  14 Sep 2009; Maciej Mrozowski (reavertm) <reavertm@poczta.fm>
  +kadu-0.6.5.3.ebuild, +kadu-9999.ebuild, +files/libgsm-ugly-code.patch,
  +metadata.xml:
  Added new ebuilds from my local overlay
