@@ -1,6 +1,6 @@
 AUX libgsm-ugly-code.patch 314 RMD160 5c613b7b4eb261d1116fcbd76a6c46b0cc0c3bb3 SHA1 b008af1a900b135b28530fc49a2be11b318f269b SHA256 17c671fe35813ae9b8c72ca7c3563a22a0894e15ddc02aba0a6f56b00e20bad2
 DIST kadu-0.6.5.3.tar.bz2 1676317 RMD160 95609df3d2c75f765861234ee2bc2bf9eb36ab10 SHA1 0714e007e42ff4c9abecee6f9b47e62d291fb6f6 SHA256 ed2ff311d1896a6344af91e65c901d72f93e2e005989a82c6f35a4dbfced6a75
-EBUILD kadu-0.6.5.3.ebuild 4672 RMD160 5dc9c6c2e142719b67560706f1d6fd5b053fbb8a SHA1 07e2a691b52e6a9d01bb0bba4494bcd6d87277f9 SHA256 44cb4a3b42d48015e7eacd092daefad41562b7b8384a80fa42a1540dcb05f5a5
-EBUILD kadu-9999.ebuild 4616 RMD160 125a2a74811d405fc0abe7515a83bdcdecc55620 SHA1 0134b91b49826d884024ecac668b2e91cd6d3e5b SHA256 ca15f79f60daa2b74f55be76f495e4bf2f4ba4a0d56c28f3ab7c49f8bfadf369
-MISC ChangeLog 364 RMD160 a6f49e65543a6ebb3491545cbb62527ad29b80e2 SHA1 48b3ffc7ec38c8f0748008ad480691efc7cfaeef SHA256 19d923c7fbcf1579f5b9c58612a9683afadcca4104618ad6a3c73b49cce21f2b
+EBUILD kadu-0.6.5.3.ebuild 4606 RMD160 e42a4fd358e1286e6ccc1a378ed5cab474cb02ec SHA1 c93fcde1fe775fc661f92d546b7fc87258bb69cb SHA256 12beb2e328efcd1fab10a9588f8f6a0399bd2745de571d3c42dadb21e3d4894b
+EBUILD kadu-9999.ebuild 4550 RMD160 b40db516361c5e28ca2b8a3d0a4584150e6c2da0 SHA1 51bc337677c02110a796ade5754251ad12d4cb4b SHA256 faed461bb4d7af1eb5b806892ec046a2cd507df9d140787adc81b1d8a7c7e5e4
+MISC ChangeLog 475 RMD160 63eeb7d155cb0b3a887ccd18c795341d9e260799 SHA1 4332bb904a9d8c6fd01f54b89fc55192dc240468 SHA256 89e8865536221bf859756ee7c8dd2cc604aed1ba57395dffec2a3da63207125e
 MISC metadata.xml 553 RMD160 aa7fd9382a310c3b5ef9fce62b5d3f90dc28d63a SHA1 7f4b9adf6fed69ec27b80a7ead57c02d6344b1f7 SHA256 628e49254e1f339aa61860f1ffb6bb55725cb799f75ed192ce7a2945e917f4f8
