@@ -15,8 +15,7 @@ KEYWORDS=""
 SLOT="0"
 IUSE="alsa ao +avatar config_wizard kde oss sms speech spell +ssl voice"
 
-COMMON_DEPEND="
-	>=app-crypt/qca-2.0.0-r2
+DEPEND=">=app-crypt/qca-2.0.0-r2
 	>=media-libs/libsndfile-1.0
 	>=net-libs/libgadu-1.8[threads]
 	>=x11-libs/qt-dbus-4.4:4
@@ -24,15 +23,11 @@ COMMON_DEPEND="
 	>=x11-libs/qt-webkit-4.4:4
 	alsa? ( media-libs/alsa-lib )
 	ao? ( media-libs/libao )
-	spell? ( app-text/aspell )
-"
-DEPEND="${COMMON_DEPEND}
-	>=dev-util/cmake-2.6
-"
-RDEPEND="${COMMON_DEPEND}
+	spell? ( app-text/aspell )"
+
+RDEPEND="${DEPEND}
 	speech? ( app-accessibility/powiedz )
-	ssl? ( app-crypt/qca-ossl:2 )
-"
+	ssl? ( app-crypt/qca-ossl:2 )"
 
 S="${WORKDIR}/${PN}"
 
