@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Sep 2009; Dominik Kapusta <ayoy@gentoo.org> kadu-0.6.5.3.ebuild,
+  kadu-9999.ebuild:
+  Corrected DEPENDS
+
 *kadu-9999 (14 Sep 2009)
 *kadu-0.6.5.3 (14 Sep 2009)
 
